[package]
name = "android-tools"
version = "0.1.8"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "Android-related tools for building and developing applications 🛠"
repository = "https://github.com/dodorare/android-tools-rs"
license = "Apache-2.0"
keywords = ["android", "sdk", "tools", "cli"]
readme = "README.md"

[dependencies]
thiserror = "1.0"
displaydoc = "0.2"
walkdir = "2.3"
tempfile = "3.2"
dunce = "1.0"
dirs = "4.0.0"
which = "4.0"
zip = "0.5.13"
fs_extra = "1.2"
zip-extensions = "0.6"


[features]
default = ["aapt2", "bundletool"]
aapt2 = []
bundletool = []
java_tools = []


